<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black" >

    <LinearLayout
        android:id="@+id/whole_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:splitMotionEvents="false">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/timerViewContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:orientation="vertical"
                android:visibility="visible" >

                <TextView
                    style="@style/title_style"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:text="@string/app_name" />

                <com.android.soundrecorder.PrizeSoundWavesSurfaceView
                    android:id="@+id/soundWaves"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="30dp" >

                    <TextView
                        android:id="@+id/timerView"
                        style="@style/play_time_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/zero_time"
                        android:textDirection="locale"
                        android:textSize="26sp" />

                    <TextView
                        android:id="@+id/recordingFileName"
                        style="@style/play_file_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:singleLine="true"
                        android:textColor="#A3A3A3"
                        android:textDirection="locale"
                        android:textSize="15sp"
                        android:layout_marginTop="5dp" />

                    <TextView
                        android:id="@+id/recordingStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:singleLine="true"
                        android:textColor="#A3A3A3"
                        android:textDirection="locale"
                        android:textSize="15sp"
                        android:layout_marginTop="5dp" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:splitMotionEvents="false"
            android:visibility="gone" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:splitMotionEvents="false" >

                <LinearLayout
                    android:id="@+id/exitButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_vertical"
                    android:background="@color/linearLayoutGrayColor"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:splitMotionEvents="false"
                    android:visibility="gone" >

                    <Button
                        android:id="@+id/discardButton"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="55dip"
                        android:layout_weight="1"
                        android:text="@string/discard" />

                    <Button
                        android:id="@+id/acceptButton"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="55dip"
                        android:layout_weight="1"
                        android:ellipsize="marquee"
                        android:singleLine="true"
                        android:text="@string/accept" />
                </LinearLayout>
            </RelativeLayout>
        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/btn_group_marginbottom"
            android:gravity="top"
            android:visibility="visible" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:splitMotionEvents="false" >

                <ImageView
                    android:id="@+id/im_stop_record"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/sel_stop_record" />

                <ImageView
                    android:id="@+id/im_control_record"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/sel_start_record" />

                <ImageView
                    android:id="@+id/im_file_list"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/sel_file_list" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>